<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favoritefilled"
        android:title="@string/favorite_option_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/refresh_option_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_option_title"
        android:visible="true"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

</menu>
