<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp">

        <ImageView
            android:id="@+id/backgroundId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/placeholderDescription"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/title_image"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="4dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/tvHeading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvHeading"
            app:srcCompat="@drawable/stats" />

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/placeholderItemText"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/title_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Firemaking" />

        <TextView
            android:id="@+id/levelLabelTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:text="@string/statLevelLabelText"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvHeading"
            app:layout_constraintStart_toEndOf="@+id/title_image"
            app:layout_constraintTop_toTopOf="@+id/tvHeading" />

        <TextView
            android:id="@+id/rankTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/levelLabelTV" />

        <TextView
            android:id="@+id/levelTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/levelLabelTV"
            app:layout_constraintTop_toTopOf="@+id/levelLabelTV" />

        <TextView
            android:id="@+id/xpTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/xpLabelTV"
            app:layout_constraintTop_toTopOf="@+id/xpLabelTV" />

        <TextView
            android:id="@+id/xpLabelTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:text="@string/statXpLabelText"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/title_image"
            app:layout_constraintTop_toTopOf="@+id/levelTV" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/underline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="36dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>